Bug/#33 filter options not visible (#40)
* WIP: Added separate filter menu and fixed visiblity #33

* Added labels to filter screen. #33

* Hide the add button when using filter menu #33

--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -8,6 +8,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  min-width: 33%;
 }
 
 .item-label--type {
@@ -15,4 +16,7 @@
   padding-left: 1rem;
   text-transform: uppercase;
 }
-  
+
+.popover-content {
+  width: 80% !important;
+}
